# sarif

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  NOTICE.md  README.md
.cargo/: config.toml
apps/: README.md
apps/sarifc/: Cargo.toml  README.md
apps/sarifc/src/: artifact.rs  command.rs  input.rs  main.rs  reports.rs
apps/sarifc/src/artifact/: native.rs
apps/sarifc/tests/: cli.rs
apps/sarifc/tests/cli/: artifacts.rs  execution.rs  formatting.rs  support.rs  validation.rs
apps/sarifc/tests/fixtures/: bootstrap_doc_parity_paths.txt  bootstrap_format_parity_paths.txt  bootstrap_syntax.format.sarif  const_control_flow.format.sarif  hello_package.doc.md  semantic_check_cases.tsv  semantic_doc_cases.tsv
apps/sarifc/tests/fixtures/bootstrap_doc/: bootstrap_syntax.doc.md  bootstrap_tools.doc.md  const_control_flow.doc.md  multi_file_package.doc.md
apps/sarifc/tests/fixtures/semantic_check/: affine_reuse.stderr.txt  contract_failures.stderr.txt  rt_forbidden_text.stderr.txt
bootstrap/sarif_syntax/: Sarif.toml
bootstrap/sarif_syntax/src/: hir.sarif  main.sarif  selfcheck.sarif
bootstrap/sarif_tools/: Sarif.toml
bootstrap/sarif_tools/src/: main.sarif
crates/: README.md
crates/sarif_codegen/: Cargo.toml  README.md
crates/sarif_codegen/src/: lib.rs  native.rs  object.rs  wasm.rs
crates/sarif_codegen/src/wasm/: memory.rs  runtime.rs
crates/sarif_frontend/: Cargo.toml  README.md
crates/sarif_frontend/src/: diagnostics.rs  hir.rs  lib.rs  ownership.rs  semantic.rs
crates/sarif_frontend/src/semantic/: bodycheck.rs  exprcore.rs  profile.rs  resolve.rs  support.rs  typecheck.rs
crates/sarif_syntax/: Cargo.toml  README.md
crates/sarif_syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/sarif_tools/: Cargo.toml  README.md
crates/sarif_tools/src/: doc.rs  format.rs  lib.rs  replay.rs  report.rs
docs/: compiler-architecture.md  directives.md  engineering-practices.md  execution-checklist.md  language-spec.md  performance.md  platforms.md  reactive-runtime-checklist.md  reactive-runtime.md  references.md  repo-layout.md  roadmap.md  status.md  stdlib-roadmap.md
examples/: arrays_len.sarif  hello.sarif  indexed_repeat_sum.sarif  mutable_total.sarif  nested_arrays.sarif
examples/hello-package/: Sarif.toml
examples/invalid/: affine_reuse.sarif  contract_affine_move.sarif  contract_failures.sarif  contract_runtime_fail.sarif  rt_forbidden_composite_types.sarif  rt_forbidden_effects.sarif  rt_forbidden_text.sarif  total_forbidden_repeat.sarif  total_forbidden_while.sarif
examples/multi-file-package/: Sarif.toml
examples/multi-file-package/src/: consts.sarif  functions.sarif  types.sarif
runtime/: README.md  sarif_runtime.c
spec/: grammar.ebnf
