[workspace]
members = [
    "apps/sarifc",
    "crates/sarif_codegen",
    "crates/sarif_frontend",
    "crates/sarif_syntax",
    "crates/sarif_tools",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MPL-2.0"
rust-version = "1.94.0"
version = "0.1.0"

[workspace.dependencies]
ariadne = "0.6.0"
cranelift-codegen = "0.129.1"
cranelift-frontend = "0.129.1"
cranelift-module = "0.129.1"
cranelift-native = "0.129.1"
cranelift-object = "0.129.1"
logos = "0.16.1"
strsim = "0.11.1"
target-lexicon = "0.13.5"
toml = "1.0.6"
wat = "1.245.1"
wasmtime = { version = "42.0.1", default-features = false, features = ["cranelift", "runtime", "std", "wat"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
