[workspace]
members = [
    "apps/sarifc",
    "crates/sarif_codegen",
    "crates/sarif_frontend",
    "crates/sarif_syntax",
    "crates/sarif_tools",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MPL-2.0"
rust-version = "1.95.0"
version = "0.1.0"

[workspace.dependencies]
ariadne = "0.6.0"
cranelift-codegen = "0.131.0"
cranelift-frontend = "0.131.0"
cranelift-module = "0.131.0"
cranelift-native = "0.131.0"
cranelift-object = "0.131.0"
logos = "0.16.1"
strsim = "0.11.1"
target-lexicon = "0.13.5"
toml = "1.1.2"
wat = "1.248.0"
wasmtime = { version = "44.0.0", default-features = false, features = ["cranelift", "runtime", "std", "wat"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
incremental = false

[profile.dev]
debug = 0
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3

[profile.test]
debug = 0
incremental = true
codegen-units = 256

[profile.test.package."*"]
opt-level = 3

[profile.release-fast]
inherits = "release"
lto = "off"
codegen-units = 16
strip = "none"
debug = 1

[profile.release-max]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = 1
strip = "none"
