[package]
name = "sarifc"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["format", "codegen", "native-build", "wasm", "docs"]
format = []
codegen = ["dep:sarif_codegen"]
native-build = ["codegen", "sarif_codegen/backend-native"]
wasm = ["codegen", "sarif_codegen/backend-wasm"]
docs = []

[dependencies]
sarif_codegen = { path = "../../crates/sarif_codegen", optional = true }
sarif_frontend = { path = "../../crates/sarif_frontend" }
sarif_syntax = { path = "../../crates/sarif_syntax" }
sarif_tools = { path = "../../crates/sarif_tools" }
toml.workspace = true

[dev-dependencies]
wasmtime.workspace = true

[lints]
workspace = true
