[package]
name = "sarif_codegen"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
backend-native = ["dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-module", "dep:cranelift-native", "dep:cranelift-object", "dep:target-lexicon"]
backend-wasm = ["dep:wasmtime", "dep:wat"]

[dependencies]
cranelift-codegen = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-native = { workspace = true, optional = true }
cranelift-object = { workspace = true, optional = true }
sarif_frontend = { path = "../sarif_frontend" }
sarif_syntax = { path = "../sarif_syntax" }
target-lexicon = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }
wat = { workspace = true, optional = true }
